led folder created.
config.py removed (un-needed).

Minor changes to default_config.json file.

Moving to LED branch.

--- a/config/default_config.json
+++ b/config/default_config.json
@@ -2,7 +2,8 @@
 	"connection": {
 		"ip_add": "192.168.1.99"
 	},
-	"active_led": {
+	"setup": "LED",
+	"LEDs": {
 		"led1": 5,
 		"led2": 6,
 		"led3": 13,
