--- a/config/default_config.json
+++ b/config/default_config.json
@@ -9,5 +9,9 @@
 		"led3": 13,
 		"led4": 19,
 		"led5": 26
+	},
+	"dirs": {
+		"/home/jumbo/terraria": "/media/3tbred/backups/terraria",
+        "/home/jumbo/minecraft": "/media/3tbred/backups/minecraft"
 	}
 }
